--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "codemirror": "^5.62.2",
+    "lodash": "^4.17.21",
     "marked": "^2.1.3",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -17,7 +18,8 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
