--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "markdown-preview",
   "version": "0.1.0",
+  "homepage": "https://geekreflex.github.io/markdown-preview",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
@@ -8,6 +9,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "codemirror": "^5.62.2",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "marked": "^2.1.3",
     "normalize.css": "^8.0.1",
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
